fixed spacing

--- a/index.css
+++ b/index.css
@@ -17,15 +17,15 @@ body{
 
   #container{
   width:95%;
-  background-color: #fbfaea;
-  margin: 0 auto;
+  background-color:#fbfaea;
+  margin:0 auto;
 }
 
 #header h1, #header h2{
   background-color:#e6d4b6;
   color:#331c17;
   text-align:center;
-  font-family: "Lora", Georgia, serif;
+  font-family:"Lora", Georgia, serif;
   font-weight:bold;
 }
 #header h1{
@@ -54,12 +54,12 @@ body{
     padding:8px 16px;
     text-decoration:none;
     border-bottom:1px solid black;
-    font-family: 'Arimo', sans-serif;
+    font-family:"Arimo", sans-serif;
 }
 
 #nav li a:hover{
-    background-color: #331c17;
-    color: #fbfaea;
+    background-color:#331c17;
+    color:#fbfaea;
 }
 
 #content{
@@ -70,7 +70,7 @@ body{
 
 #joke{
   color:black;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family:"Josefin Sans", sans-serif;
   font-size:1.2em;
   text-align:center;
   margin-top:4px;
